# interstate

./: .gitmodules  CMakeLists.txt
boards/: common.cmake  usermod-common.cmake
boards/i75w_rp2350/: mpconfigboard.cmake
